# safe-compare

./: .gitattributes  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  safe_compare.h  simple_test.cpp
